# gpu_seminar_2025

./: .gitignore  README.md  environment.yml  pyproject.toml
nbody_numba/: environment.yml
nbody_numba/src/: main.py  simulation.py  visualization.py
nbody_numba/test/: test.py
slurm_scripts/: ncu_profile.sh  nsys_profile.sh
src/nbody/: performance_simulation.py  util.py
src/nbody/benchmark/: benchmark.py  scaling_benchmark.py  util.py
src/nbody/cupy/: simulation.py
src/nbody/cupy_/: simulation.py
src/nbody/numba/: simulation.py  visualization.py
src/nbody/numba_/: run_simulation.py  simulation.py
src/nbody/pytorch_/: simulation.py
src/nbody/triton_/: simulation.py
test/nbody/numba/: test_numba.py
tests/nbody/: test_helpers.py
tests/nbody/cupy/: test_cupy.py
tests/nbody/cupy_/: test_cupy.py
tests/nbody/numba/: test_numba.py
tests/nbody/numba_/: test_numba.py
tests/nbody/pytorch/: test_pytorch.py
tests/nbody/pytorch_/: test_pytorch.py
tests/nbody/triton_/: test_triton.py
